fix text contrast and center popup

--- a/frontend/src/styles/Crash.module.css
+++ b/frontend/src/styles/Crash.module.css
@@ -74,6 +74,7 @@
     transform: translate(10%, 10%);
     padding: 5px 5px;
     cursor: pointer;
+    color: rgba(255,255,255,1)
   }
 
   .greyBox {
@@ -89,6 +90,7 @@
     padding: 20px 20px 20px 20px;
     text-align: left;
     padding-bottom: 2rem;
+    color: rgba(255,255,255,1)
   }
 
   h2 {
