--- a/frontend/src/styles/Game.module.css
+++ b/frontend/src/styles/Game.module.css
@@ -65,6 +65,7 @@ h1 {
   padding-right: 10%;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  font-size: 1.1rem;
 }
 
 .choice {
@@ -85,6 +86,7 @@ h1 {
   color: #d1b9ab;
   border-radius: 15px;
   letter-spacing: 1px;
+  font-size: 0.9rem;
   transition: 0.5s;
   transition-property: box-shadow;
   width: 170px;
@@ -114,7 +116,7 @@ h1 {
     grid-template-columns: 1fr 1fr 0.5fr;
     grid-template-rows: 1fr 1fr 1fr;
     z-index: 2;
-    opacity: 0.8;
+    background-color: rgb(4, 28, 46, 0.8);
     height: 50%;
     margin: 0 4px 4px 4px;
     border-radius: 25px;
@@ -125,12 +127,14 @@ h1 {
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 2.5rem;
+    color: rgba(255,255,255,1)
   }
   
   .text {
     grid-column-start: 1;
     grid-column-end: 3;
     font-size: 1.4rem;
+    color: rgba(255,255,255,1)
   }
 
   .containerImg {
@@ -156,5 +160,7 @@ h1 {
   .button {
     font-weight: bold;
     font-size: 1rem;
+    color: rgba(255,255,255,1);
+    opacity: 0.8;
   }
 }
